create github pages

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://bouwbedrijfverbernebv.nl">
+                    <a href="https://www.bouwbedrijfverbernebv.nl">
                         <img src="assets/images/logo-121x63.png" alt=" Bouwbedrijf Verberne" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Bouwbedrijf Verberne</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="https://www.bouwbedrijfverbernebv.nl">Bouwbedrijf Verberne B.V.</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -48,7 +48,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html#top">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html#top">Verbouwingen</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html#top">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Verbouwingen</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacts3-w">Contact</a></li></ul>
                 
                 
