--- a/page1.html
+++ b/page1.html
@@ -33,11 +33,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://bouwbedrijfverbernebv.nl">
+                    <a href="https://www.bouwbedrijfverbernebv.nl">
                         <img src="assets/images/logo-121x63.png" alt=" Bouwbedrijf Verberne" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Bouwbedrijf Verberne</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="https://www.bouwbedrijfverbernebv.nl">Bouwbedrijf Verberne B.V.</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -48,7 +48,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html#top">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html#top">Verbouwingen</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html#top">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Verbouwingen</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacts3-w">Contact</a></li></ul>
                 
                 
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Wolfkaterweg 57-A, 7554 PK Hengelo" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Wolfkaterweg 57-A, 7554 PK Hengelo" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
