--- a/page2.html
+++ b/page2.html
@@ -48,7 +48,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html#top">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Verbouwingen</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Verbouwingen</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacts3-w">Contact</a></li></ul>
                 
                 
