create github pages

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/logo-121x63.png" alt=" Bouwbedrijf Verberne" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="https://www.bouwbedrijfverbernebv.nl">Bouwbedrijf Verberne B.V.</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="https://www.bouwbedrijfverbernebv.nl"></a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Wolfkaterweg 57-A, 7554 PK Hengelo" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Wolfkaterweg 57-A, 7554 PK Hengelo" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
