--- a/page1.html
+++ b/page1.html
@@ -37,7 +37,7 @@
                         <img src="assets/images/logo-121x63.png" alt=" Bouwbedrijf Verberne" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="https://www.bouwbedrijfverbernebv.nl">Bouwbedrijf Verberne B.V.</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="https://www.bouwbedrijfverbernebv.nl"></a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
