--- a/page2.html
+++ b/page2.html
@@ -48,7 +48,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Verbouwingen</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html#team1-1n">Vacature</a></li>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html">Nieuwbouw</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Verbouwingen</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html">Vacature</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#contacts3-w">Contact</a></li></ul>
                 
                 
@@ -157,7 +157,7 @@
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Wolfkaterweg 57-A, 7554 PK Hengelo" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Wolfkaterweg 57-A, 7554 PK Hengelo" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
