create github pages

--- a/page4.html
+++ b/page4.html
@@ -118,7 +118,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5"><br>Ben jij, of ken jij iemand die op zoek is naar een nieuwe uitdaging? Dan zijn wij op zoek naar jou!<br><br>Ben je geïnteresseerd en wil je meer weten over de vacatures? Neem dan telefonisch contact met ons op.<br><br>074-3676349 / 06-54655576</h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5"><br>Ben jij, of ken jij iemand die op zoek is naar een nieuwe uitdaging? Dan zijn wij op zoek naar jou!<br><br>Ben je geïnteresseerd en wil je meer weten over de vacatures? Neem dan telefonisch contact met ons op.<br><br><strong>074-3676349 / 06-54655576</strong></h4>
                 
             </div>
         </div>
@@ -145,7 +145,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
                             <strong>Telefoon</strong></h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:074 367 6349" class="text-primary">074 367 6349</a>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="tel:074 367 6349" class="text-primary"><strong>074 367 6349</strong></a>
                         </p>
                     </div>
                 </div>
